# StudentsRecordSystem

./: CMakeLists.txt  README.md
data/: index_lista1.txt  index_lista1_small.txt  index_lista2.txt  index_lista3.txt  lista1.txt  lista1_small.txt  lista2.txt  lista3.txt  sec_lista1.txt  sec_lista1_small.txt  tmplista1.txt  tmplista2.txt  tmplista3.txt  writingTest.txt
src/: CMakeLists.txt  CreateIndexTools.cpp  CreateIndexTools.h  StudentRecord.cpp  StudentRecord.h  StudentRecordsHandler.cpp  StudentRecordsHandler.h  UnB_system.cpp  gera_index.cpp  jIndexUtil.cpp  jIndexUtil.h
test/: CMakeLists.txt  testJIndexUtil.cpp
